native/src/tarantool_factory.h

typedef struct mempool tarantool_factory_mempool;
 
typedef struct small_alloc tarantool_factory_small_alloc;
    struct tarantool_factory
    {
        tarantool_factory_small_alloc* tarantool_datas;
        tarantool_factory_mempool* tarantool_messages;
        tarantool_factory_mempool* tarantool_call_requests;
        tarantool_factory_mempool* tarantool_evaluate_requests;
        tarantool_factory_mempool* tarantool_space_requests;
        tarantool_factory_mempool* tarantool_space_count_requests;
        tarantool_factory_mempool* tarantool_space_select_requests;
        tarantool_factory_mempool* tarantool_space_update_requests;
        tarantool_factory_mempool* tarantool_space_upsert_requests;
        tarantool_factory_mempool* tarantool_space_iterator_requests;
        tarantool_factory_mempool* tarantool_index_requests;
        tarantool_factory_mempool* tarantool_index_count_requests;
        tarantool_factory_mempool* tarantool_index_id_requests;
        tarantool_factory_mempool* tarantool_index_update_requests;
        tarantool_factory_mempool* tarantool_index_iterator_requests;
        tarantool_factory_mempool* tarantool_index_select_requests;
        tarantool_factory_mempool* tarantool_index_index_ids;
    };
    void tarantool_iterator_destroy_free(struct tarantool_factory* factory, struct interactor_message* message);
    struct interactor_message* tarantool_free_output_buffer_prepare(struct tarantool_factory* factory, void* buffer, size_t buffer_size);
    void tarantool_free_output_buffer_free(struct tarantool_factory* factory, struct interactor_message* message);
    struct interactor_message* tarantool_free_output_port_prepare(struct tarantool_factory* factory, tarantool_tuple_port_t* port);
    void tarantool_free_output_port_free(struct tarantool_factory* factory, struct interactor_message* message);
    struct interactor_message* tarantool_free_output_tuple_prepare(struct tarantool_factory* factory, tarantool_tuple_t* tuple);
    void tarantool_free_output_tuple_free(struct tarantool_factory* factory, struct interactor_message* message);
    const char* tarantool_create_string(struct tarantool_factory* factory, size_t size);
    void tarantool_free_string(struct tarantool_factory* factory, const char* string, size_t size);
    void tarantool_factory_destroy(struct tarantool_factory* factory);