dart/lib/storage/bindings.dart


@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_iterator_destroy_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_iterator_destroy_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>, ffi.Pointer<ffi.Void>, ffi.Size)>(
    symbol: 'tarantool_free_output_buffer_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_free_output_buffer_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<ffi.Void> buffer,
  int buffer_size,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_free_output_buffer_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_free_output_buffer_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>,
            ffi.Pointer<tarantool_tuple_port_t>)>(
    symbol: 'tarantool_free_output_port_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_free_output_port_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<tarantool_tuple_port_t> port,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_free_output_port_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_free_output_port_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>, ffi.Pointer<tarantool_tuple_t>)>(
    symbol: 'tarantool_free_output_tuple_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_free_output_tuple_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<tarantool_tuple_t> tuple,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_free_output_tuple_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_free_output_tuple_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<tarantool_factory>, ffi.Size)>(
    symbol: 'tarantool_create_string',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<ffi.Char> tarantool_create_string(
  ffi.Pointer<tarantool_factory> factory1,
  int size,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<tarantool_factory>, ffi.Pointer<ffi.Char>, ffi.Size)>(
    symbol: 'tarantool_free_string',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_free_string(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<ffi.Char> string,
  int size,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<tarantool_factory>)>(
    symbol: 'tarantool_factory_destroy',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_factory_destroy(
  ffi.Pointer<tarantool_factory> factory1,
);

final class tarantool_box extends ffi.Struct {
  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_evaluate_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_call_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_iterator_next_single_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_iterator_next_many_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_iterator_destroy_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_free_output_buffer_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_space_id_by_name_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_space_count_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_space_length_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_space_iterator_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_space_insert_single_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_space_insert_many_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_space_put_single_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_space_put_many_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_space_delete_single_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_space_delete_many_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_space_update_single_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_space_update_many_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_space_get_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_space_min_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_space_max_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_space_truncate_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_space_upsert_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_index_count_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_index_length_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_index_iterator_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_index_get_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_index_max_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_index_min_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_index_update_single_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_index_update_many_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_index_select_address;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor_bindings.interactor_message>)>>
      tarantool_index_id_by_name_address;
}

final class tarantool_space_request extends ffi.Struct {
  @ffi.Size()
  external int tuple_size;

  external ffi.Pointer<ffi.Char> tuple;

  @ffi.Uint32()
  external int space_id;
}

final class tarantool_space_count_request extends ffi.Struct {
  @ffi.Size()
  external int key_size;

  external ffi.Pointer<ffi.Char> key;

  @ffi.Uint32()
  external int space_id;

  @ffi.Int()
  external int iterator_type;
}

final class tarantool_space_select_request extends ffi.Struct {
  @ffi.Size()
  external int key_size;

  external ffi.Pointer<ffi.Char> key;

  @ffi.Uint32()
  external int space_id;

  @ffi.Uint32()
  external int offset;

  @ffi.Uint32()
  external int limit;

  @ffi.Int()
  external int iterator_type;
}

final class tarantool_space_update_request extends ffi.Struct {
  @ffi.Size()
  external int key_size;

  @ffi.Size()
  external int operations_size;

  external ffi.Pointer<ffi.Char> key;

  external ffi.Pointer<ffi.Char> operations;

  @ffi.Uint32()
  external int space_id;
}

final class tarantool_space_upsert_request extends ffi.Struct {
  @ffi.Size()
  external int tuple_size;

  external ffi.Pointer<ffi.Char> tuple;
